# configtool

./: .pre-commit-config.yaml  .python-version  ARCHITECTURE_RECOMMENDATIONS.md  CONFIGTOOL_ARCHITECTURE.md  CONFIGTOOL_DB_SCHEMA.md  README.md  pyproject.toml  pyrightconfig.strict.json  setup_venv.ps1  sync_main_to_release.ps1
.github/workflows/: typecheck.yml
configtool/: __init__.py  command_policy.py  db.py  errors.py  helpers.py  internal.py  public.py
configtool-client/: pyproject.toml
configtool-client/configtool_client/: __init__.py  config.py  core.py  errors.py  local_config.py  services.py  types.py
configtool-client/configtool_client/mixins/: __init__.py  env.py  merge.py  runtime.py  secrets.py
configtool-secrets/: pyproject.toml
configtool-secrets/configtool_secrets/: __init__.py  constants.py  errors.py  models.py  secrets.py
configtool-secrets/configtool_secrets/handlers/: command.py  file.py  keyvault.py  vaultwarden.py
examples/minimal-file-secret/: README.md  app.py  configtool.yml  configtool_db.yml
examples/minimal-file-secret/secrets/: api_token.txt
tests/: conftest.py  test_client_config.py  test_coverage_edges.py  test_db.py  test_handler_keyvault.py  test_handler_vaultwarden.py  test_handlers_command_file.py  test_helpers_internal_public.py  test_protocol_contracts.py  test_secrets_dispatch.py
