[project]
name = "configtool"
authors = [{ name = "Robert Spadaro", email = "robertjspadaro@gmail.com" }]
description = "Configuration Tool"
readme = "README.md"
version = "3.0.9"
requires-python = ">=3.12.0"

dependencies = ["pyyaml>=6"]

classifiers = [
    'Development Status :: 3 - Beta',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
    "ruff>=0.9.0",
    "setuptools>=75.7.0",
    "build>=1.3.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "dict-hash>=1.3.7",
    "requests>=2.34.2",
    "keyring>=25.7.0",
    "azure-identity>=1.25.3",
    "azure-keyvault-secrets>=4.11.0",
    "pyright>=1.1.400",
]

[tool.uv.workspace]
members = ["configtool-client", "configtool-secrets"]

[tool.black]
line-length = 92
target-version = ['py312', 'py313']
skip-string-normalization = true

[tool.ruff.lint]
ignore = ['F403', 'F405']

[tool.isort]
profile = 'black'
line_length = 92

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=configtool --cov=configtool_client --cov=configtool_secrets --cov-branch --cov-report=term-missing --cov-fail-under=95"

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
